--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
 
 .slideshow {
     width: 100%;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -69,7 +70,7 @@
     color: rgba(255, 255, 255, 0.5);
     user-select: none;
     cursor: pointer;
-    z-index: 2;
+    z-index: 5;
 }
 
 .arrow:hover {
@@ -99,7 +100,7 @@
     padding: 0;
     margin: 0;
     color: white;
-    z-index: 3;
+    z-index: 5;
 }
 
 .point {
@@ -109,6 +110,39 @@
     opacity: 0.5;
 }
 
+/* --- PROGRESS BAR ---- 
+
+#progress {
+    width: 100%;
+    height: 30px;
+    position: absolute;
+    background-color: #ddd;
+    z-index: 5;
+    top: 90%;
+  }
+  
+  #bar {
+    background-color: #00cee1;
+    width: 10px;
+    height: 30px;
+    position: absolute;
+  }
+
+
+button {
+    background-color:#00cee1;
+    z-index: 5;
+    position: absolute;
+    top: 0%;
+    padding: 1rem;
+    border: none;
+}
+
+.play_button {
+    font-size: 2rem;
+}
+
+*/
 
  /* --- AKTIV ---- */
 
